# scatter-svg

./: .gitignore  Dockerfile  Makefile  QUICK-TEST-REFERENCE.txt  README.md  TEST-README.md  TESTING-SUMMARY.md  VISUALIZATION-IMPLEMENTATION.md  VISUALIZATION-README.md  build.sh  model-data-example.csv  model-data-example.json  plot-models-scatter.py  pyproject.toml  requirements.txt  test_plot_models_scatter.py  visualization-tools-comparison.md
.github/: renovate.json
.github/workflows/: ci.yml  docker.yml  lint.yml  renovate.yml
examples/: model-data-example.json
src/scatter_svg/: __init__.py  __main__.py  plot.py
tests/: __init__.py  test_plot.py
